--- a/parent/auth/src/main/resources/bootstrap.yml
+++ b/parent/auth/src/main/resources/bootstrap.yml
@@ -1,11 +1,13 @@
-spring.application.name=auth
-
-spring.cloud.nacos.config.server-addr=119.45.168.251:8848
-spring.cloud.nacos.config.enabled=true
-spring.cloud.nacos.config.namespace=dev
-spring.cloud.nacos.config.file-extension=yml
-spring.cloud.nacos.config.prefix=auth
-
-
-spring.cloud.nacos.discovery.server-addr=119.45.168.251:8848
-spring.cloud.nacos.discovery.namespace=dev
+spring:
+  application:
+    name: auth
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 119.45.168.251:8848
+        namespace: dev
+      config:
+        prefix: auth
+        file-extension: yml
+        server-addr: 119.45.168.251:8848
+        namespace: dev
