[auth]全局拦截器实现校验token

--- a/parent/auth/pom.xml
+++ b/parent/auth/pom.xml
@@ -66,6 +66,13 @@
 <!--            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>-->
 <!--        </dependency>-->
 
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus</artifactId>
+            <version>3.5.1</version>
+        </dependency>
+
+
 
 
 
