--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -13,6 +13,11 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <modules>
+        <module>common</module>
+        <module>auth</module>
+    </modules>
+
 
     <build>
         <plugins>
