--- a/parent/common/pom.xml
+++ b/parent/common/pom.xml
@@ -14,6 +14,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>common</name>
 
+    <packaging>pom</packaging>
+
     <description>common project for all project</description>
 
 
